Cleaned up css issue causing elements to misalign

--- a/public/stylesheets/less/crypton.less
+++ b/public/stylesheets/less/crypton.less
@@ -1,5 +1,5 @@
 .temp-spacer { // Temporary spacer for gauging
-	width:100%;
+	/*width:100%*/
 	height:600px;
 }
 
@@ -30,6 +30,7 @@
 
 .left {text-align:left}
 .right {text-align:right}
+.center {text-align:center}
 .dark {color:@std-gray}
 
 .anchor {
@@ -41,6 +42,7 @@ body {
 	margin:0;
 	padding:0;
 	background-color:#000;
+	-webkit-font-smoothing: antialiased;
 
 	&.body-getting-started #getting-started,
 	&.body-documentation #documentation,
@@ -54,26 +56,28 @@ a, a:hover, a:visited {
 }
 
 .navigation-wrapper {
-	width:100%;
+	/*width:100%*/
 	height:75px;
 	background:url('/images/background.png');
-	overflow:hidden;
 	margin:0;
 	padding:1px 30px;
 	position:fixed;
 	z-index:20;
 	border-bottom:2px solid @std-gray;
 
-	.boxShadow(-20px; 2px; 10px; #000);
+	.boxShadow(-1px; 2px; 16px; #000);
+
+	left:0;
+	right:0;
 }
 
 .cover {
 	height:100%;
-	width:100%;
 	background-color:#000;
 	opacity:0.5;
 	position:absolute;
 	left:0;
+	right:0;
 	top:0;
 	z-index:25;
 }
@@ -112,7 +116,6 @@ a, a:hover, a:visited {
 }
 
 .wrapper {
-	width:100%;
 	margin:0;
 	padding:90px 0 1px;
 	position:relative;
@@ -132,13 +135,10 @@ a, a:hover, a:visited {
 	position:relative;
 	width:1000px;
 	margin:0 auto;
-	text-align:center;
-
 	&:after{.after}
 }
 
 .row {
-	width:100%;
 	position:relative;
 	margin:0;
 	padding:0;
@@ -163,6 +163,9 @@ a, a:hover, a:visited {
 		}
 		&.two {
 			width:49%
+		}
+		&.block {
+			width:70%;
 		}
 
 		&.col1 {margin-left:0%}
@@ -262,7 +265,6 @@ ol {
 }
 
 hr{
-	width:100%;
 	height:1px;
 	margin:0 0 30px 0;
 	background:#e6e6e6;
@@ -287,7 +289,7 @@ pre { /* Borrowed from http://www.longren.org/wrapping-text-inside-pre-tags/ */
 	color:#ffffff;
 	margin:0;
 	padding:8px;
-	width:100%;
+	/*width:100%*/
 	position:relative;
 	top:-27px;
 	left:-8px;
@@ -338,14 +340,16 @@ span {
 
 .footer {
 	background-color:#fff;
-	width:100%;
 	padding:20px;
-	.after();
+	width:1000px;
+	margin:0 auto;
+	&:after{ .after };
 	.copyright{
 		float:left;
 	}
 	.connect {
 		float:right;
+		text-align:right;
 	}
 	a {
 		color:@std-orange;
